lib/src/compiler/tests/testdata/errors/7.out
error[E006]: unexpected negative number
 --> line:3:19
  |
3 |   condition: 1 << -1 == 0
  |                   ^^ this number can not be negative
  |